# actix-cookie-security

./: Cargo.toml  README.md
examples/: call_api_by_admin.rs  call_api_by_editor.rs  call_api_by_editor_and_admin.rs  impl_traits.rs  routes.rs
examples/common/: app.rs  constants.rs  create_cookie.rs  create_server.rs  error.rs  mod.rs  session_factory.rs  session_service.rs  strategy.rs
examples/common/client/: call_admin_handle.rs  call_editor_admin_handle.rs  call_editor_handle.rs  call_forbidden.rs  call_guest_handle.rs  call_login.rs  call_logout.rs  call_unauthorized.rs  error.rs  mod.rs
examples/common/models/: mod.rs  role.rs  session.rs  user.rs
examples/common/session_repository/: messages.rs  mod.rs  story.rs
secured-cookie-macro/: Cargo.toml
secured-cookie-macro/src/: lib.rs
secured-cookie-macro/src/implement/: mod.rs
secured-cookie-macro/src/implement/secured/: mod.rs  parser.rs
secured-cookie-middleware/: Cargo.toml
secured-cookie-middleware/src/: lib.rs  middleware.rs  session.rs  util.rs
secured-cookie-session/: Cargo.toml
secured-cookie-session/src/: lib.rs
src/: error.rs  lib.rs
