[package]
name = "actix-cookie-security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
async-trait = "~0.1"
actix-web = { version = "~4.4" }
futures = "~0.3"

[dependencies]
secured-cookie-macro = { path = "./secured-cookie-macro" }
secured-cookie-middleware = { path = "./secured-cookie-middleware" }
secured-cookie-session = { path = "./secured-cookie-session" }
actix-web.workspace = true

[workspace]
members = [".", "secured-cookie-macro", "secured-cookie-middleware", "secured-cookie-session"]

[[example]]
name = "call_api_by_editor"

[[example]]
name = "call_api_by_admin"

[[example]]
name = "call_api_by_editor_and_admin"

[dev-dependencies]
async-trait = "~0.1"
uuid = { version = "~1.6", features = ["v4"] }
reqwest = { version = "~0.11", features = ["cookies"]}
thiserror = "~1.0"
actix = "~0.13"
futures = "~0.3"