[package]
name = "secured-cookie-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
futures.workspace = true
secured-cookie-session = { path = "./../secured-cookie-session" }